--- a/Apologia.On Evolution.Youtube.html
+++ b/Apologia.On Evolution.Youtube.html
@@ -1,5 +1,5 @@
 <Title>Apologetic護教短片 - 對無神論的討論 (英語YouTube)</Title>
-
+<meta charset="UTF-8">
 <style type="text/css">
   body { color: black; background: white; 
     margin-left: 5%; margin-right: 5%; }
