Update Hymns on Youtube.html

--- a/Hymns on Youtube.html
+++ b/Hymns on Youtube.html
@@ -1,6 +1,6 @@
 <html>
 <Title>中港台现代赞美诗迭</Title>
-
+<meta charset="UTF-8">
 <style type="text/css">
   body { color: black; background: white; 
     margin-left: 3%; margin-right: 3%; }
